--- a/css/register.css
+++ b/css/register.css
@@ -113,6 +113,7 @@
     justify-content: space-between;
     text-align: center;
     margin-bottom: 5px;
+    z-index: 1;
 }
 
 .header-info header {
@@ -137,11 +138,13 @@
     background-color: #fff;
     max-width: 900px;
     width: 100%;
+    /* height: 100vh; */
     padding: 30px;
     border-radius: 6px;
-    margin: 0 15px;
+    margin: 5px 15px 10px;
+    /* margin-top: ; */
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ffffff;
+    border: 1px solid #dfdfdf;
 }
 
 .container header {
@@ -165,7 +168,7 @@
 .container form {
     position: relative;
     background-color: #fff;
-    min-height: 490px;
+    min-height: 550px;
     margin-top: 16px;
     overflow: hidden;
 }
@@ -223,7 +226,7 @@ form .fields .input-field {
     color: #2e2e2e;
 }
 
-.input-field input {
+.input-field input,select {
     outline: none;
     height: 42px;
     margin: 8px 0;
